--- a/src/app/components/apod/apod.component.html
+++ b/src/app/components/apod/apod.component.html
@@ -20,7 +20,7 @@
       
     </mat-card-content>
     <mat-card-actions>
-      <a mat-raised-button href="whatsapp://send?text=Astronomy Picture of the day localhost:4200" data-text="Take a look at this awesome website:"><span class="material-icons">
+      <a mat-raised-button href="whatsapp://send?text=Astronomy Picture of the day nasa-api-application.netlify.app" data-text="Take a look at this awesome website:"class="center"><span class="material-icons">
         share
         </span>  Share</a>
     </mat-card-actions>
