--- a/src/app/components/curiosity/curiosity.component.html
+++ b/src/app/components/curiosity/curiosity.component.html
@@ -8,7 +8,8 @@
       <mat-card-content>
       </mat-card-content>
       <mat-card-actions>
-        <a mat-raised-button href="whatsapp://send?text=Astronomy Picture of the day localhost:4200" data-text="Take a look at this awesome website:"><span class="material-icons">
+       
+        <a mat-raised-button href="whatsapp://send?text=Astronomy https://nasa-api-application.netlify.app" class="center" data-text="Take a look at this awesome website:"><span class="material-icons">
             share
             </span>  Share</a>
       </mat-card-actions>
