--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -7,7 +7,11 @@
     top: 64px;
 
 }
-
+.center{
+    display: block;
+  margin-left: auto;
+  margin-right: auto;
+  }
 .app-container {
     position: absolute;
     top: 0;
