--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,7 +17,7 @@
   <main class="app-body">
       <router-outlet></router-outlet>
       <footer>
-        <center><a mat-raised-button href="www.pratikdhore.tech"> &copy; DrPratik</a></center>
+       <a mat-raised-button href="https://www.pratikdhore.tech" class="center"> &copy; DrPratik</a>
       </footer>
   </main>
 </div>
