--- a/src/app/components/apod/apod.component.css
+++ b/src/app/components/apod/apod.component.css
@@ -4,7 +4,11 @@ mat-card {
     margin: 25px auto;
     
   }
-  
+  .center{
+    display: block;
+  margin-left: auto;
+  margin-right: auto;
+  }
   .header-image {
     background-size: cover;
 }  
