--- a/src/app/components/curiosity/curiosity.component.css
+++ b/src/app/components/curiosity/curiosity.component.css
@@ -2,8 +2,11 @@
     max-width: 400px;
     margin: 25px auto;
   }
-
- 
+  .center{
+    display: block;
+  margin-left: auto;
+  margin-right: auto;
+  }
   
   .example-header-image {
     background-image: url('https://image.flaticon.com/icons/svg/2092/2092034.svg');
